src/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> compilation_unit
Rule 1     compilation_unit -> main_program subprogram_list_opt
Rule 2     main_program -> PROGRAM IDEN body END
Rule 3     main_program -> PROGRAM IDEN END
Rule 4     subprogram_list_opt -> empty
Rule 5     subprogram_list_opt -> subprogram_list
Rule 6     subprogram_list -> subprogram
Rule 7     subprogram_list -> subprogram_list subprogram
Rule 8     subprogram -> function_definition
Rule 9     function_definition -> function_type FUNCTION IDEN ( param_list_opt ) body END
Rule 10    function_definition -> function_type FUNCTION IDEN ( param_list_opt ) END
Rule 11    function_type -> INTEGER
Rule 12    function_type -> REAL
Rule 13    function_type -> LOGICAL
Rule 14    function_type -> CHARACTER
Rule 15    param_list_opt -> empty
Rule 16    param_list_opt -> id_list
Rule 17    body -> item
Rule 18    body -> body item
Rule 19    item -> declaration
Rule 20    item -> statement
Rule 21    declaration -> INTEGER decl_item_list
Rule 22    declaration -> REAL decl_item_list
Rule 23    declaration -> LOGICAL decl_item_list
Rule 24    declaration -> CHARACTER decl_item_list
Rule 25    declaration -> CHARACTER MUL INT decl_item_list
Rule 26    decl_item_list -> decl_item
Rule 27    decl_item_list -> decl_item_list , decl_item
Rule 28    decl_item -> IDEN
Rule 29    decl_item -> IDEN ( int_list )
Rule 30    int_list -> INT
Rule 31    int_list -> int_list , INT
Rule 32    id_list -> IDEN
Rule 33    id_list -> id_list , IDEN
Rule 34    statement -> assignment
Rule 35    statement -> print_stmt
Rule 36    statement -> read_stmt
Rule 37    statement -> if_stmt
Rule 38    statement -> do_stmt
Rule 39    statement -> goto_stmt
Rule 40    statement -> continue_stmt
Rule 41    statement -> return_stmt
Rule 42    statement -> labeled_stmt
Rule 43    labeled_stmt -> LABEL statement
Rule 44    assignment -> designator EQ expr
Rule 45    print_stmt -> PRINT MUL , expr_list
Rule 46    read_stmt -> READ MUL , designator_list
Rule 47    goto_stmt -> GOTO INT
Rule 48    continue_stmt -> CONTINUE
Rule 49    return_stmt -> RETURN
Rule 50    if_stmt -> IF ( expr ) THEN stmt_block ENDIF
Rule 51    if_stmt -> IF ( expr ) THEN stmt_block ELSE stmt_block ENDIF
Rule 52    stmt_block -> statement
Rule 53    stmt_block -> stmt_block statement
Rule 54    do_stmt -> DO INT IDEN EQ expr , expr
Rule 55    do_stmt -> DO INT IDEN EQ expr , expr , expr
Rule 56    designator -> IDEN
Rule 57    designator -> IDEN ( expr_list )
Rule 58    designator_list -> designator
Rule 59    designator_list -> designator_list , designator
Rule 60    expr_list -> expr
Rule 61    expr_list -> expr_list , expr
Rule 62    expr -> expr ADD expr
Rule 63    expr -> expr SUB expr
Rule 64    expr -> expr MUL expr
Rule 65    expr -> expr DIV expr
Rule 66    expr -> expr POW expr
Rule 67    expr -> expr EQEQ expr
Rule 68    expr -> expr NE expr
Rule 69    expr -> expr LT expr
Rule 70    expr -> expr LE expr
Rule 71    expr -> expr GT expr
Rule 72    expr -> expr GE expr
Rule 73    expr -> expr AND expr
Rule 74    expr -> expr OR expr
Rule 75    expr -> NOT expr
Rule 76    expr -> SUB expr
Rule 77    expr -> ADD expr
Rule 78    expr -> ( expr )
Rule 79    expr -> INT
Rule 80    expr -> FLOAT
Rule 81    expr -> STRING
Rule 82    expr -> BOOL
Rule 83    expr -> designator
Rule 84    empty -> <empty>

Terminals, with rules where they appear

(                    : 9 10 29 50 51 57 78
)                    : 9 10 29 50 51 57 78
,                    : 27 31 33 45 46 54 55 55 59 61
ADD                  : 62 77
AND                  : 73
BOOL                 : 82
CHARACTER            : 14 24 25
CONTINUE             : 48
DIV                  : 65
DO                   : 54 55
ELSE                 : 51
END                  : 2 3 9 10
ENDIF                : 50 51
EQ                   : 44 54 55
EQEQ                 : 67
FLOAT                : 80
FUNCTION             : 9 10
GE                   : 72
GOTO                 : 47
GT                   : 71
IDEN                 : 2 3 9 10 28 29 32 33 54 55 56 57
IF                   : 50 51
INT                  : 25 30 31 47 54 55 79
INTEGER              : 11 21
LABEL                : 43
LE                   : 70
LOGICAL              : 13 23
LT                   : 69
MUL                  : 25 45 46 64
NE                   : 68
NOT                  : 75
OR                   : 74
POW                  : 66
PRINT                : 45
PROGRAM              : 2 3
READ                 : 46
REAL                 : 12 22
RETURN               : 49
STRING               : 81
SUB                  : 63 76
THEN                 : 50 51
error                : 

Nonterminals, with rules where they appear

assignment           : 34
body                 : 2 9 18
compilation_unit     : 0
continue_stmt        : 40
decl_item            : 26 27
decl_item_list       : 21 22 23 24 25 27
declaration          : 19
designator           : 44 58 59 83
designator_list      : 46 59
do_stmt              : 38
empty                : 4 15
expr                 : 44 50 51 54 54 55 55 55 60 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 76 77 78
expr_list            : 45 57 61
function_definition  : 8
function_type        : 9 10
goto_stmt            : 39
id_list              : 16 33
if_stmt              : 37
int_list             : 29 31
item                 : 17 18
labeled_stmt         : 42
main_program         : 1
param_list_opt       : 9 10
print_stmt           : 35
read_stmt            : 36
return_stmt          : 41
statement            : 20 43 52 53
stmt_block           : 50 51 51 53
subprogram           : 6 7
subprogram_list      : 5 7
subprogram_list_opt  : 1

Parsing method: LALR

state 0

    (0) S' -> . compilation_unit
    (1) compilation_unit -> . main_program subprogram_list_opt
    (2) main_program -> . PROGRAM IDEN body END
    (3) main_program -> . PROGRAM IDEN END

    PROGRAM         shift and go to state 3

    compilation_unit               shift and go to state 1
    main_program                   shift and go to state 2

state 1

    (0) S' -> compilation_unit .



state 2

    (1) compilation_unit -> main_program . subprogram_list_opt
    (4) subprogram_list_opt -> . empty
    (5) subprogram_list_opt -> . subprogram_list
    (84) empty -> .
    (6) subprogram_list -> . subprogram
    (7) subprogram_list -> . subprogram_list subprogram
    (8) subprogram -> . function_definition
    (9) function_definition -> . function_type FUNCTION IDEN ( param_list_opt ) body END
    (10) function_definition -> . function_type FUNCTION IDEN ( param_list_opt ) END
    (11) function_type -> . INTEGER
    (12) function_type -> . REAL
    (13) function_type -> . LOGICAL
    (14) function_type -> . CHARACTER

    $end            reduce using rule 84 (empty -> .)
    INTEGER         shift and go to state 10
    REAL            shift and go to state 11
    LOGICAL         shift and go to state 12
    CHARACTER       shift and go to state 13

    subprogram_list_opt            shift and go to state 4
    empty                          shift and go to state 5
    subprogram_list                shift and go to state 6
    subprogram                     shift and go to state 7
    function_definition            shift and go to state 8
    function_type                  shift and go to state 9

state 3

    (2) main_program -> PROGRAM . IDEN body END
    (3) main_program -> PROGRAM . IDEN END

    IDEN            shift and go to state 14


state 4

    (1) compilation_unit -> main_program subprogram_list_opt .

    $end            reduce using rule 1 (compilation_unit -> main_program subprogram_list_opt .)


state 5

    (4) subprogram_list_opt -> empty .

    $end            reduce using rule 4 (subprogram_list_opt -> empty .)


state 6

    (5) subprogram_list_opt -> subprogram_list .
    (7) subprogram_list -> subprogram_list . subprogram
    (8) subprogram -> . function_definition
    (9) function_definition -> . function_type FUNCTION IDEN ( param_list_opt ) body END
    (10) function_definition -> . function_type FUNCTION IDEN ( param_list_opt ) END
    (11) function_type -> . INTEGER
    (12) function_type -> . REAL
    (13) function_type -> . LOGICAL
    (14) function_type -> . CHARACTER

    $end            reduce using rule 5 (subprogram_list_opt -> subprogram_list .)
    INTEGER         shift and go to state 10
    REAL            shift and go to state 11
    LOGICAL         shift and go to state 12
    CHARACTER       shift and go to state 13

    subprogram                     shift and go to state 15
    function_definition            shift and go to state 8
    function_type                  shift and go to state 9

state 7

    (6) subprogram_list -> subprogram .

    INTEGER         reduce using rule 6 (subprogram_list -> subprogram .)
    REAL            reduce using rule 6 (subprogram_list -> subprogram .)
    LOGICAL         reduce using rule 6 (subprogram_list -> subprogram .)
    CHARACTER       reduce using rule 6 (subprogram_list -> subprogram .)
    $end            reduce using rule 6 (subprogram_list -> subprogram .)


state 8

    (8) subprogram -> function_definition .

    INTEGER         reduce using rule 8 (subprogram -> function_definition .)
    REAL            reduce using rule 8 (subprogram -> function_definition .)
    LOGICAL         reduce using rule 8 (subprogram -> function_definition .)
    CHARACTER       reduce using rule 8 (subprogram -> function_definition .)
    $end            reduce using rule 8 (subprogram -> function_definition .)


state 9

    (9) function_definition -> function_type . FUNCTION IDEN ( param_list_opt ) body END
    (10) function_definition -> function_type . FUNCTION IDEN ( param_list_opt ) END

    FUNCTION        shift and go to state 16


state 10

    (11) function_type -> INTEGER .

    FUNCTION        reduce using rule 11 (function_type -> INTEGER .)


state 11

    (12) function_type -> REAL .

    FUNCTION        reduce using rule 12 (function_type -> REAL .)


state 12

    (13) function_type -> LOGICAL .

    FUNCTION        reduce using rule 13 (function_type -> LOGICAL .)


state 13

    (14) function_type -> CHARACTER .

    FUNCTION        reduce using rule 14 (function_type -> CHARACTER .)


state 14

    (2) main_program -> PROGRAM IDEN . body END
    (3) main_program -> PROGRAM IDEN . END
    (17) body -> . item
    (18) body -> . body item
    (19) item -> . declaration
    (20) item -> . statement
    (21) declaration -> . INTEGER decl_item_list
    (22) declaration -> . REAL decl_item_list
    (23) declaration -> . LOGICAL decl_item_list
    (24) declaration -> . CHARACTER decl_item_list
    (25) declaration -> . CHARACTER MUL INT decl_item_list
    (34) statement -> . assignment
    (35) statement -> . print_stmt
    (36) statement -> . read_stmt
    (37) statement -> . if_stmt
    (38) statement -> . do_stmt
    (39) statement -> . goto_stmt
    (40) statement -> . continue_stmt
    (41) statement -> . return_stmt
    (42) statement -> . labeled_stmt
    (44) assignment -> . designator EQ expr
    (45) print_stmt -> . PRINT MUL , expr_list
    (46) read_stmt -> . READ MUL , designator_list
    (50) if_stmt -> . IF ( expr ) THEN stmt_block ENDIF
    (51) if_stmt -> . IF ( expr ) THEN stmt_block ELSE stmt_block ENDIF
    (54) do_stmt -> . DO INT IDEN EQ expr , expr
    (55) do_stmt -> . DO INT IDEN EQ expr , expr , expr
    (47) goto_stmt -> . GOTO INT
    (48) continue_stmt -> . CONTINUE
    (49) return_stmt -> . RETURN
    (43) labeled_stmt -> . LABEL statement
    (56) designator -> . IDEN
    (57) designator -> . IDEN ( expr_list )

    END             shift and go to state 19
    INTEGER         shift and go to state 23
    REAL            shift and go to state 24
    LOGICAL         shift and go to state 25
    CHARACTER       shift and go to state 26
    PRINT           shift and go to state 37
    READ            shift and go to state 38
    IF              shift and go to state 39
    DO              shift and go to state 40
    GOTO            shift and go to state 41
    CONTINUE        shift and go to state 42
    RETURN          shift and go to state 43
    LABEL           shift and go to state 44
    IDEN            shift and go to state 17

    body                           shift and go to state 18
    item                           shift and go to state 20
    declaration                    shift and go to state 21
    statement                      shift and go to state 22
    assignment                     shift and go to state 27
    print_stmt                     shift and go to state 28
    read_stmt                      shift and go to state 29
    if_stmt                        shift and go to state 30
    do_stmt                        shift and go to state 31
    goto_stmt                      shift and go to state 32
    continue_stmt                  shift and go to state 33
    return_stmt                    shift and go to state 34
    labeled_stmt                   shift and go to state 35
    designator                     shift and go to state 36

state 15

    (7) subprogram_list -> subprogram_list subprogram .

    INTEGER         reduce using rule 7 (subprogram_list -> subprogram_list subprogram .)
    REAL            reduce using rule 7 (subprogram_list -> subprogram_list subprogram .)
    LOGICAL         reduce using rule 7 (subprogram_list -> subprogram_list subprogram .)
    CHARACTER       reduce using rule 7 (subprogram_list -> subprogram_list subprogram .)
    $end            reduce using rule 7 (subprogram_list -> subprogram_list subprogram .)


state 16

    (9) function_definition -> function_type FUNCTION . IDEN ( param_list_opt ) body END
    (10) function_definition -> function_type FUNCTION . IDEN ( param_list_opt ) END

    IDEN            shift and go to state 45


state 17

    (56) designator -> IDEN .
    (57) designator -> IDEN . ( expr_list )

    EQ              reduce using rule 56 (designator -> IDEN .)
    ADD             reduce using rule 56 (designator -> IDEN .)
    SUB             reduce using rule 56 (designator -> IDEN .)
    MUL             reduce using rule 56 (designator -> IDEN .)
    DIV             reduce using rule 56 (designator -> IDEN .)
    POW             reduce using rule 56 (designator -> IDEN .)
    EQEQ            reduce using rule 56 (designator -> IDEN .)
    NE              reduce using rule 56 (designator -> IDEN .)
    LT              reduce using rule 56 (designator -> IDEN .)
    LE              reduce using rule 56 (designator -> IDEN .)
    GT              reduce using rule 56 (designator -> IDEN .)
    GE              reduce using rule 56 (designator -> IDEN .)
    AND             reduce using rule 56 (designator -> IDEN .)
    OR              reduce using rule 56 (designator -> IDEN .)
    )               reduce using rule 56 (designator -> IDEN .)
    ,               reduce using rule 56 (designator -> IDEN .)
    END             reduce using rule 56 (designator -> IDEN .)
    INTEGER         reduce using rule 56 (designator -> IDEN .)
    REAL            reduce using rule 56 (designator -> IDEN .)
    LOGICAL         reduce using rule 56 (designator -> IDEN .)
    CHARACTER       reduce using rule 56 (designator -> IDEN .)
    PRINT           reduce using rule 56 (designator -> IDEN .)
    READ            reduce using rule 56 (designator -> IDEN .)
    IF              reduce using rule 56 (designator -> IDEN .)
    DO              reduce using rule 56 (designator -> IDEN .)
    GOTO            reduce using rule 56 (designator -> IDEN .)
    CONTINUE        reduce using rule 56 (designator -> IDEN .)
    RETURN          reduce using rule 56 (designator -> IDEN .)
    LABEL           reduce using rule 56 (designator -> IDEN .)
    IDEN            reduce using rule 56 (designator -> IDEN .)
    ENDIF           reduce using rule 56 (designator -> IDEN .)
    ELSE            reduce using rule 56 (designator -> IDEN .)
    (               shift and go to state 46


state 18

    (2) main_program -> PROGRAM IDEN body . END
    (18) body -> body . item
    (19) item -> . declaration
    (20) item -> . statement
    (21) declaration -> . INTEGER decl_item_list
    (22) declaration -> . REAL decl_item_list
    (23) declaration -> . LOGICAL decl_item_list
    (24) declaration -> . CHARACTER decl_item_list
    (25) declaration -> . CHARACTER MUL INT decl_item_list
    (34) statement -> . assignment
    (35) statement -> . print_stmt
    (36) statement -> . read_stmt
    (37) statement -> . if_stmt
    (38) statement -> . do_stmt
    (39) statement -> . goto_stmt
    (40) statement -> . continue_stmt
    (41) statement -> . return_stmt
    (42) statement -> . labeled_stmt
    (44) assignment -> . designator EQ expr
    (45) print_stmt -> . PRINT MUL , expr_list
    (46) read_stmt -> . READ MUL , designator_list
    (50) if_stmt -> . IF ( expr ) THEN stmt_block ENDIF
    (51) if_stmt -> . IF ( expr ) THEN stmt_block ELSE stmt_block ENDIF
    (54) do_stmt -> . DO INT IDEN EQ expr , expr
    (55) do_stmt -> . DO INT IDEN EQ expr , expr , expr
    (47) goto_stmt -> . GOTO INT
    (48) continue_stmt -> . CONTINUE
    (49) return_stmt -> . RETURN
    (43) labeled_stmt -> . LABEL statement
    (56) designator -> . IDEN
    (57) designator -> . IDEN ( expr_list )

    END             shift and go to state 47
    INTEGER         shift and go to state 23
    REAL            shift and go to state 24
    LOGICAL         shift and go to state 25
    CHARACTER       shift and go to state 26
    PRINT           shift and go to state 37
    READ            shift and go to state 38
    IF              shift and go to state 39
    DO              shift and go to state 40
    GOTO            shift and go to state 41
    CONTINUE        shift and go to state 42
    RETURN          shift and go to state 43
    LABEL           shift and go to state 44
    IDEN            shift and go to state 17

    item                           shift and go to state 48
    declaration                    shift and go to state 21
    statement                      shift and go to state 22
    assignment                     shift and go to state 27
    print_stmt                     shift and go to state 28
    read_stmt                      shift and go to state 29
    if_stmt                        shift and go to state 30
    do_stmt                        shift and go to state 31
    goto_stmt                      shift and go to state 32
    continue_stmt                  shift and go to state 33
    return_stmt                    shift and go to state 34
    labeled_stmt                   shift and go to state 35
    designator                     shift and go to state 36

state 19

    (3) main_program -> PROGRAM IDEN END .

    INTEGER         reduce using rule 3 (main_program -> PROGRAM IDEN END .)
    REAL            reduce using rule 3 (main_program -> PROGRAM IDEN END .)
    LOGICAL         reduce using rule 3 (main_program -> PROGRAM IDEN END .)
    CHARACTER       reduce using rule 3 (main_program -> PROGRAM IDEN END .)
    $end            reduce using rule 3 (main_program -> PROGRAM IDEN END .)


state 20

    (17) body -> item .

    END             reduce using rule 17 (body -> item .)
    INTEGER         reduce using rule 17 (body -> item .)
    REAL            reduce using rule 17 (body -> item .)
    LOGICAL         reduce using rule 17 (body -> item .)
    CHARACTER       reduce using rule 17 (body -> item .)
    PRINT           reduce using rule 17 (body -> item .)
    READ            reduce using rule 17 (body -> item .)
    IF              reduce using rule 17 (body -> item .)
    DO              reduce using rule 17 (body -> item .)
    GOTO            reduce using rule 17 (body -> item .)
    CONTINUE        reduce using rule 17 (body -> item .)
    RETURN          reduce using rule 17 (body -> item .)
    LABEL           reduce using rule 17 (body -> item .)
    IDEN            reduce using rule 17 (body -> item .)


state 21

    (19) item -> declaration .

    END             reduce using rule 19 (item -> declaration .)
    INTEGER         reduce using rule 19 (item -> declaration .)
    REAL            reduce using rule 19 (item -> declaration .)
    LOGICAL         reduce using rule 19 (item -> declaration .)
    CHARACTER       reduce using rule 19 (item -> declaration .)
    PRINT           reduce using rule 19 (item -> declaration .)
    READ            reduce using rule 19 (item -> declaration .)
    IF              reduce using rule 19 (item -> declaration .)
    DO              reduce using rule 19 (item -> declaration .)
    GOTO            reduce using rule 19 (item -> declaration .)
    CONTINUE        reduce using rule 19 (item -> declaration .)
    RETURN          reduce using rule 19 (item -> declaration .)
    LABEL           reduce using rule 19 (item -> declaration .)
    IDEN            reduce using rule 19 (item -> declaration .)


state 22

    (20) item -> statement .

    END             reduce using rule 20 (item -> statement .)
    INTEGER         reduce using rule 20 (item -> statement .)
    REAL            reduce using rule 20 (item -> statement .)
    LOGICAL         reduce using rule 20 (item -> statement .)
    CHARACTER       reduce using rule 20 (item -> statement .)
    PRINT           reduce using rule 20 (item -> statement .)
    READ            reduce using rule 20 (item -> statement .)
    IF              reduce using rule 20 (item -> statement .)
    DO              reduce using rule 20 (item -> statement .)
    GOTO            reduce using rule 20 (item -> statement .)
    CONTINUE        reduce using rule 20 (item -> statement .)
    RETURN          reduce using rule 20 (item -> statement .)
    LABEL           reduce using rule 20 (item -> statement .)
    IDEN            reduce using rule 20 (item -> statement .)


state 23

    (21) declaration -> INTEGER . decl_item_list
    (26) decl_item_list -> . decl_item
    (27) decl_item_list -> . decl_item_list , decl_item
    (28) decl_item -> . IDEN
    (29) decl_item -> . IDEN ( int_list )

    IDEN            shift and go to state 51

    decl_item_list                 shift and go to state 49
    decl_item                      shift and go to state 50

state 24

    (22) declaration -> REAL . decl_item_list
    (26) decl_item_list -> . decl_item
    (27) decl_item_list -> . decl_item_list , decl_item
    (28) decl_item -> . IDEN
    (29) decl_item -> . IDEN ( int_list )

    IDEN            shift and go to state 51

    decl_item_list                 shift and go to state 52
    decl_item                      shift and go to state 50

state 25

    (23) declaration -> LOGICAL . decl_item_list
    (26) decl_item_list -> . decl_item
    (27) decl_item_list -> . decl_item_list , decl_item
    (28) decl_item -> . IDEN
    (29) decl_item -> . IDEN ( int_list )

    IDEN            shift and go to state 51

    decl_item_list                 shift and go to state 53
    decl_item                      shift and go to state 50

state 26

    (24) declaration -> CHARACTER . decl_item_list
    (25) declaration -> CHARACTER . MUL INT decl_item_list
    (26) decl_item_list -> . decl_item
    (27) decl_item_list -> . decl_item_list , decl_item
    (28) decl_item -> . IDEN
    (29) decl_item -> . IDEN ( int_list )

    MUL             shift and go to state 55
    IDEN            shift and go to state 51

    decl_item_list                 shift and go to state 54
    decl_item                      shift and go to state 50

state 27

    (34) statement -> assignment .

    END             reduce using rule 34 (statement -> assignment .)
    INTEGER         reduce using rule 34 (statement -> assignment .)
    REAL            reduce using rule 34 (statement -> assignment .)
    LOGICAL         reduce using rule 34 (statement -> assignment .)
    CHARACTER       reduce using rule 34 (statement -> assignment .)
    PRINT           reduce using rule 34 (statement -> assignment .)
    READ            reduce using rule 34 (statement -> assignment .)
    IF              reduce using rule 34 (statement -> assignment .)
    DO              reduce using rule 34 (statement -> assignment .)
    GOTO            reduce using rule 34 (statement -> assignment .)
    CONTINUE        reduce using rule 34 (statement -> assignment .)
    RETURN          reduce using rule 34 (statement -> assignment .)
    LABEL           reduce using rule 34 (statement -> assignment .)
    IDEN            reduce using rule 34 (statement -> assignment .)
    ENDIF           reduce using rule 34 (statement -> assignment .)
    ELSE            reduce using rule 34 (statement -> assignment .)


state 28

    (35) statement -> print_stmt .

    END             reduce using rule 35 (statement -> print_stmt .)
    INTEGER         reduce using rule 35 (statement -> print_stmt .)
    REAL            reduce using rule 35 (statement -> print_stmt .)
    LOGICAL         reduce using rule 35 (statement -> print_stmt .)
    CHARACTER       reduce using rule 35 (statement -> print_stmt .)
    PRINT           reduce using rule 35 (statement -> print_stmt .)
    READ            reduce using rule 35 (statement -> print_stmt .)
    IF              reduce using rule 35 (statement -> print_stmt .)
    DO              reduce using rule 35 (statement -> print_stmt .)
    GOTO            reduce using rule 35 (statement -> print_stmt .)
    CONTINUE        reduce using rule 35 (statement -> print_stmt .)
    RETURN          reduce using rule 35 (statement -> print_stmt .)
    LABEL           reduce using rule 35 (statement -> print_stmt .)
    IDEN            reduce using rule 35 (statement -> print_stmt .)
    ENDIF           reduce using rule 35 (statement -> print_stmt .)
    ELSE            reduce using rule 35 (statement -> print_stmt .)


state 29

    (36) statement -> read_stmt .

    END             reduce using rule 36 (statement -> read_stmt .)
    INTEGER         reduce using rule 36 (statement -> read_stmt .)
    REAL            reduce using rule 36 (statement -> read_stmt .)
    LOGICAL         reduce using rule 36 (statement -> read_stmt .)
    CHARACTER       reduce using rule 36 (statement -> read_stmt .)
    PRINT           reduce using rule 36 (statement -> read_stmt .)
    READ            reduce using rule 36 (statement -> read_stmt .)
    IF              reduce using rule 36 (statement -> read_stmt .)
    DO              reduce using rule 36 (statement -> read_stmt .)
    GOTO            reduce using rule 36 (statement -> read_stmt .)
    CONTINUE        reduce using rule 36 (statement -> read_stmt .)
    RETURN          reduce using rule 36 (statement -> read_stmt .)
    LABEL           reduce using rule 36 (statement -> read_stmt .)
    IDEN            reduce using rule 36 (statement -> read_stmt .)
    ENDIF           reduce using rule 36 (statement -> read_stmt .)
    ELSE            reduce using rule 36 (statement -> read_stmt .)


state 30

    (37) statement -> if_stmt .

    END             reduce using rule 37 (statement -> if_stmt .)
    INTEGER         reduce using rule 37 (statement -> if_stmt .)
    REAL            reduce using rule 37 (statement -> if_stmt .)
    LOGICAL         reduce using rule 37 (statement -> if_stmt .)
    CHARACTER       reduce using rule 37 (statement -> if_stmt .)
    PRINT           reduce using rule 37 (statement -> if_stmt .)
    READ            reduce using rule 37 (statement -> if_stmt .)
    IF              reduce using rule 37 (statement -> if_stmt .)
    DO              reduce using rule 37 (statement -> if_stmt .)
    GOTO            reduce using rule 37 (statement -> if_stmt .)
    CONTINUE        reduce using rule 37 (statement -> if_stmt .)
    RETURN          reduce using rule 37 (statement -> if_stmt .)
    LABEL           reduce using rule 37 (statement -> if_stmt .)
    IDEN            reduce using rule 37 (statement -> if_stmt .)
    ENDIF           reduce using rule 37 (statement -> if_stmt .)
    ELSE            reduce using rule 37 (statement -> if_stmt .)


state 31

    (38) statement -> do_stmt .

    END             reduce using rule 38 (statement -> do_stmt .)
    INTEGER         reduce using rule 38 (statement -> do_stmt .)
    REAL            reduce using rule 38 (statement -> do_stmt .)
    LOGICAL         reduce using rule 38 (statement -> do_stmt .)
    CHARACTER       reduce using rule 38 (statement -> do_stmt .)
    PRINT           reduce using rule 38 (statement -> do_stmt .)
    READ            reduce using rule 38 (statement -> do_stmt .)
    IF              reduce using rule 38 (statement -> do_stmt .)
    DO              reduce using rule 38 (statement -> do_stmt .)
    GOTO            reduce using rule 38 (statement -> do_stmt .)
    CONTINUE        reduce using rule 38 (statement -> do_stmt .)
    RETURN          reduce using rule 38 (statement -> do_stmt .)
    LABEL           reduce using rule 38 (statement -> do_stmt .)
    IDEN            reduce using rule 38 (statement -> do_stmt .)
    ENDIF           reduce using rule 38 (statement -> do_stmt .)
    ELSE            reduce using rule 38 (statement -> do_stmt .)


state 32

    (39) statement -> goto_stmt .

    END             reduce using rule 39 (statement -> goto_stmt .)
    INTEGER         reduce using rule 39 (statement -> goto_stmt .)
    REAL            reduce using rule 39 (statement -> goto_stmt .)
    LOGICAL         reduce using rule 39 (statement -> goto_stmt .)
    CHARACTER       reduce using rule 39 (statement -> goto_stmt .)
    PRINT           reduce using rule 39 (statement -> goto_stmt .)
    READ            reduce using rule 39 (statement -> goto_stmt .)
    IF              reduce using rule 39 (statement -> goto_stmt .)
    DO              reduce using rule 39 (statement -> goto_stmt .)
    GOTO            reduce using rule 39 (statement -> goto_stmt .)
    CONTINUE        reduce using rule 39 (statement -> goto_stmt .)
    RETURN          reduce using rule 39 (statement -> goto_stmt .)
    LABEL           reduce using rule 39 (statement -> goto_stmt .)
    IDEN            reduce using rule 39 (statement -> goto_stmt .)
    ENDIF           reduce using rule 39 (statement -> goto_stmt .)
    ELSE            reduce using rule 39 (statement -> goto_stmt .)


state 33

    (40) statement -> continue_stmt .

    END             reduce using rule 40 (statement -> continue_stmt .)
    INTEGER         reduce using rule 40 (statement -> continue_stmt .)
    REAL            reduce using rule 40 (statement -> continue_stmt .)
    LOGICAL         reduce using rule 40 (statement -> continue_stmt .)
    CHARACTER       reduce using rule 40 (statement -> continue_stmt .)
    PRINT           reduce using rule 40 (statement -> continue_stmt .)
    READ            reduce using rule 40 (statement -> continue_stmt .)
    IF              reduce using rule 40 (statement -> continue_stmt .)
    DO              reduce using rule 40 (statement -> continue_stmt .)
    GOTO            reduce using rule 40 (statement -> continue_stmt .)
    CONTINUE        reduce using rule 40 (statement -> continue_stmt .)
    RETURN          reduce using rule 40 (statement -> continue_stmt .)
    LABEL           reduce using rule 40 (statement -> continue_stmt .)
    IDEN            reduce using rule 40 (statement -> continue_stmt .)
    ENDIF           reduce using rule 40 (statement -> continue_stmt .)
    ELSE            reduce using rule 40 (statement -> continue_stmt .)


state 34

    (41) statement -> return_stmt .

    END             reduce using rule 41 (statement -> return_stmt .)
    INTEGER         reduce using rule 41 (statement -> return_stmt .)
    REAL            reduce using rule 41 (statement -> return_stmt .)
    LOGICAL         reduce using rule 41 (statement -> return_stmt .)
    CHARACTER       reduce using rule 41 (statement -> return_stmt .)
    PRINT           reduce using rule 41 (statement -> return_stmt .)
    READ            reduce using rule 41 (statement -> return_stmt .)
    IF              reduce using rule 41 (statement -> return_stmt .)
    DO              reduce using rule 41 (statement -> return_stmt .)
    GOTO            reduce using rule 41 (statement -> return_stmt .)
    CONTINUE        reduce using rule 41 (statement -> return_stmt .)
    RETURN          reduce using rule 41 (statement -> return_stmt .)
    LABEL           reduce using rule 41 (statement -> return_stmt .)
    IDEN            reduce using rule 41 (statement -> return_stmt .)
    ENDIF           reduce using rule 41 (statement -> return_stmt .)
    ELSE            reduce using rule 41 (statement -> return_stmt .)


state 35

    (42) statement -> labeled_stmt .

    END             reduce using rule 42 (statement -> labeled_stmt .)
    INTEGER         reduce using rule 42 (statement -> labeled_stmt .)
    REAL            reduce using rule 42 (statement -> labeled_stmt .)
    LOGICAL         reduce using rule 42 (statement -> labeled_stmt .)
    CHARACTER       reduce using rule 42 (statement -> labeled_stmt .)
    PRINT           reduce using rule 42 (statement -> labeled_stmt .)
    READ            reduce using rule 42 (statement -> labeled_stmt .)
    IF              reduce using rule 42 (statement -> labeled_stmt .)
    DO              reduce using rule 42 (statement -> labeled_stmt .)
    GOTO            reduce using rule 42 (statement -> labeled_stmt .)
    CONTINUE        reduce using rule 42 (statement -> labeled_stmt .)
    RETURN          reduce using rule 42 (statement -> labeled_stmt .)
    LABEL           reduce using rule 42 (statement -> labeled_stmt .)
    IDEN            reduce using rule 42 (statement -> labeled_stmt .)
    ENDIF           reduce using rule 42 (statement -> labeled_stmt .)
    ELSE            reduce using rule 42 (statement -> labeled_stmt .)


state 36

    (44) assignment -> designator . EQ expr

    EQ              shift and go to state 56


state 37

    (45) print_stmt -> PRINT . MUL , expr_list

    MUL             shift and go to state 57


state 38

    (46) read_stmt -> READ . MUL , designator_list

    MUL             shift and go to state 58


state 39

    (50) if_stmt -> IF . ( expr ) THEN stmt_block ENDIF
    (51) if_stmt -> IF . ( expr ) THEN stmt_block ELSE stmt_block ENDIF

    (               shift and go to state 59


state 40

    (54) do_stmt -> DO . INT IDEN EQ expr , expr
    (55) do_stmt -> DO . INT IDEN EQ expr , expr , expr

    INT             shift and go to state 60


state 41

    (47) goto_stmt -> GOTO . INT

    INT             shift and go to state 61


state 42

    (48) continue_stmt -> CONTINUE .
